20160719更新 部份程式碼新增註解 新增優化圖片.hpp 新增半自動測試.hpp 新增 TestFile.hpp ColorBalance.hpp 修改 surftMatcher.hpp -> SurftMatcher.hpp camshift.hpp -> Camshift.hpp 移除 ReadWriteFile.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,5 @@ add_executable(main main.cpp)
 
 # Link your application with OpenCV libraries
 target_link_libraries(main ${OpenCV_LIBS})
+target_link_libraries(main tesseract)
+target_link_libraries(main lept)
